# mentisdb

./: .dockerignore  .env.example  .gitignore  0.8.6-plan.md  AGENTS.md  Cargo.toml  Dockerfile  ENGINEERING_PIPELINE.md  MENTISDB_SKILL.md  Makefile  README.md  ROADMAP.md  WHITEPAPER.md  WHITEPAPER.tex  WORLDCLASS_SEARCH_PLAN.md  build-whitepaper.sh  changelog.txt  start_mentisdb  start_mentisdbd
.qwen/: settings.json  settings.json.orig
benches/: http_concurrency.rs  skill_registry.rs  thought_chain.rs
benchmarks/: README.md  convomem_bench.py  locomo_bench.py  longmemeval_bench.py  run_longmemeval.sh
docs/: agent-memory-protocol.html  competitive-analysis-2026-04-14.md  competitive-analysis-april-2026.html  competitive-analysis.html  federated-search-design.md  index.html  llm-extracted-memories-design.md  longmemeval-benchmark.html  mentisdb-0.8.0.html  mentisdb-0.8.1.html  mentisdb-0.8.2.html  mentisdb-0.8.3-hotfix.html  mentisdb-0.8.5-retrieval-tuning.html  mentisdb-0.8.5-update-odyssey.html  mentisdb-0.8.6.html  mentisdb-0.8.7.html  mentisdb-0.8.8.html  mentisdb-0.8.9.html  mentisdb-0.9.1.html  mentisdb-0.9.2.38-release-notes.md  mentisdb-0.9.2.38.html  mentisdb-0.9.3.39-release-notes.md  mentisdb-0.9.3.39.html  mentisdb-0.9.4.40.html  mentisdb-0.9.5.41.html  mentisdb-0.9.6.42.html  mentisdb-0.9.7.43-release-notes.md  mentisdb-0.9.7.43.html  mentisdb-backup-and-restore.html  mentisdb-comparative-analysis-2026.html  mentisdb-content-ingestion.html  (+8 more)
pymentisdb/: README.md  __init__.py  client.py  langchain.py  pyproject.toml  types.py
pymentisdb/tests/: test_client.py
(+69 files in other folders)
