[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymentisdb"
version = "0.9.0"
description = "Python client for MentisDB - semantic hash-chained memory for agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Angel Leon", email = "gubatron@gmail.com"}
]
keywords = ["agents", "memory", "llm", "langchain", "semantic-memory", "mentisdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/CloudLLM-ai/mentisdb"
Documentation = "https://docs.rs/mentisdb/latest/mentisdb/"
Repository = "https://github.com/CloudLLM-ai/mentisdb"
Issues = "https://github.com/CloudLLM-ai/mentisdb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymentisdb*"]

[tool.setuptools.package-data]
pymentisdb = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
